--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html,body{
 
 h1{
   max-width: 940px;
-  font-size: 2.5em;
+  font-size: 2.5rem;
   font-family: Lato, sans-serif;
   font-weight: 700;
   line-height: 1.1;
@@ -32,6 +32,17 @@ h1{
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 500px){
+  .App .main-container h1 {
+    margin-top: 25px;
+    margin-bottom: 12.5px;
+    font-size: 1.6rem !important;
+    overflow-wrap: break-word;
+}
+}
+
+
 /*
 
 
